grammar/env.peg
start = item*

item = content_line / comment

content_line =  p:content {return p}
content =  k:key '=' _ v:value _ {return {type:"KV",k,v}}

key = [a-zA-Z0-9-_]+ { return text() }
value = [a-zA-Z0-9-_{}:\ "]+ { return text() }

comment = p:(single) {return {type:"COMMENT",value:p}}

single = '#' p:([^\n]*) _ {return p.join('')}

_ = [ \t\r\n]* 
